<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav1Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/houseboat"
        android:title="@string/nav1" />
    <item
        android:id="@+id/nav2Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/groups"
        android:title="@string/nav2" />
    <item
        android:id="@+id/nav3Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/agriculture"
        android:title="@string/nav3" />
    <item
        android:id="@+id/nav4Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/stories"
        android:title="@string/nav4" />
    <item
        android:id="@+id/nav5Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/flutter_dash"
        android:title="@string/nav5" />
</menu>